--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.49.5",
     "@types/react-router-dom": "^5.3.3",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/node": "^5.2.1",
     "antd": "^5.25.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
@@ -33,6 +36,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
+    "vercel": "^42.3.0",
     "vite": "^5.4.2"
   }
 }
